# trading-review-wiki

./: CHANGELOG.md  README.md  README_CN.md  REFACTOR.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build.yml
collab/: README.md  _config.md  trading-rules.md
collab/scripts/: append-to-wiki.cjs
collab/templates/: daily-report-template.md
docs/: CLI外部接入与使用指南.md  交易复盘Schema参考模板.md
docs/architecture_tasks/: BASELINE_MANIFEST.json  DOCUMENT_LANDING_RUNBOOK.md  F0_OWNER_KICKOFF.md  README.md  REVISION_NOTES_v1.2.1.md  fusion_ai_invest_research_codex_master_execution_guide.md  fusion_ai_invest_research_master_plan.md
docs/architecture_tasks/archive/: README.md  fusion_ai_invest_research_master_plan_pre_v1.2.1_20260624T082349Z.md
scripts/: check-build.py  check-build2.py  check-job.py  get-logs.py  patch-release.py  release.py  reorganize-wiki.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: fs.rs
src/commands/: fs.ts
src/components/chat/: chat-message.tsx  chat-panel.tsx
src/i18n/: en.json  zh.json
src/lib/: auto-save.ts  clip-watcher.ts  confidence.ts  deep-research.ts  frontmatter.ts  graph-relevance.ts  ingest-queue.ts  ingest.ts  llm-client.ts  multi-agent-ingest.ts  multi-agent.ts  project-store.ts  search.ts  summary-layer.ts  templates.ts  token-budget.ts  trade-import.ts  trade-persist.ts  trade-stats.ts  wiki-doctor.ts  wiki-graph.ts
src/stores/: chat-store.ts  wiki-store.ts
src/types/: theme.ts
(+14 files in other folders)
